--- a/style.css
+++ b/style.css
@@ -92,6 +92,44 @@ scroll-snap-type: y mandatory;
     background-position: center;
 }
 
+/* ! Botões fixos de navegação */
+.navigation-buttons {
+    position: fixed;
+    bottom: 20px; 
+    right: 20px; 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    z-index: 1001; 
+}
+
+.navigation-buttons button {
+    background-color: #0097EE;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, background-color 0.8s ease;
+}
+
+.navigation-buttons button:hover {
+    background-color: #007ACC;
+    transform: scale(1.1);
+}
+
+.navigation-buttons button:active {
+    transform: scale(1.05);
+}
+
+.navigation-buttons button[style*="display: none"] {
+    opacity: 0; /* Torna o botão invisível */
+    visibility: hidden; /* Remove interatividade */
+}
+
 /* ! HEADER */
 .header{
     width: 100%;
@@ -264,7 +302,5 @@ scroll-snap-type: y mandatory;
     word-spacing: 3px;    /* Espaço entre palavras */
     line-height: 1.2;     /* Espaço entre linhas */
 }
-
-
 
 
