--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h1, h2{
     font-size: 50px;
 }
 
-.teste{
+.content-skills_column{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
