--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ overflow: hidden; /* Remove a barra de rolagem */
 scroll-snap-type: y mandatory;
 }
 
-h1, h2{
+h1, h2, p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -403,3 +403,48 @@ h1, h2{
     color: white;
 }
 
+/* ! PROJECTS */
+
+.projects-petz{
+    width: 350px;
+    height: 400px;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+
+.projects-petz_title img{
+    width: 350px;
+    border-radius: 20px 20px 0 0;
+    border-bottom: 1px solid black;
+}
+
+.projects-petz_text{
+    display: flex;
+    flex-direction: column;
+    padding: 7px;
+}
+
+.projects-petz_text h1{
+    font-size: 20px;
+}
+
+.projects-petz_text h2{
+    font-size: 13px;
+    color: #8B8989;
+}
+
+.projects-petz_text p{
+    font-size: 15px;
+}
+
+.projects-petz_imgs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.projects-petz_imgs img{
+    width: 40px;
+    padding: 5px;
+}
