--- a/style.css
+++ b/style.css
@@ -405,46 +405,143 @@ h1, h2, p{
 
 /* ! PROJECTS */
 
-.projects-petz{
+.projects-carousel{
+    display: flex;
+}
+
+/* ? PROJECT 1 */
+.project-one{
     width: 350px;
     height: 400px;
     border: 1px solid black;
     border-radius: 20px;
 }
 
-.projects-petz_title img{
+.project-one_title img{
     width: 350px;
     border-radius: 20px 20px 0 0;
     border-bottom: 1px solid black;
 }
 
-.projects-petz_text{
+.project-one_text{
     display: flex;
     flex-direction: column;
     padding: 7px;
 }
 
-.projects-petz_text h1{
+.project-one_text h1{
     font-size: 20px;
 }
 
-.projects-petz_text h2{
+.project-one_text h2{
     font-size: 13px;
     color: #8B8989;
 }
 
-.projects-petz_text p{
+.project-one_text p{
     font-size: 15px;
 }
 
-.projects-petz_imgs{
+.project-one_imgs{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5px;
 }
 
-.projects-petz_imgs img{
+.project-one_imgs img{
+    width: 40px;
+    padding: 5px;
+}
+
+/* ? PROJECT 2 */
+
+.project-two{
+    width: 350px;
+    height: 400px;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+
+.project-two_title img{
+    width: 350px;
+    border-radius: 20px 20px 0 0;
+    border-bottom: 1px solid black;
+}
+
+.project-two_text{
+    display: flex;
+    flex-direction: column;
+    padding: 7px;
+}
+
+.project-two_text h1{
+    font-size: 20px;
+}
+
+.project-two_text h2{
+    font-size: 13px;
+    color: #8B8989;
+}
+
+.project-two_text p{
+    font-size: 15px;
+}
+
+.project-two_imgs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.project-two_imgs img{
+    width: 40px;
+    padding: 5px;
+}
+
+/* ? PROJECT 3 */
+
+.project-three{
+    width: 350px;
+    height: 400px;
+    border: 1px solid black;
+    border-radius: 20px;
+}
+
+.project-three_title img{
+    width: 350px;
+    border-radius: 20px 20px 0 0;
+    border-bottom: 1px solid black;
+}
+
+.project-three_text{
+    display: flex;
+    flex-direction: column;
+    padding: 7px;
+}
+
+.project-three_text h1{
+    font-size: 20px;
+}
+
+.project-three_text h2{
+    font-size: 13px;
+    color: #8B8989;
+}
+
+.project-three_text p{
+    font-size: 15px;
+}
+
+.project-three_imgs{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+}
+
+.project-three_imgs img{
     width: 40px;
     padding: 5px;
 }
