--- a/style.css
+++ b/style.css
@@ -489,3 +489,90 @@ h1, h2, p{
     width: 40px;
     padding: 0 5px;
 }
+
+/* ! FOOTER */
+
+.footer {
+    color: #fff;
+    padding: 40px 20px;
+    font-family: 'Arial', sans-serif;
+}
+
+.footer-container {
+    max-width: 1500px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    gap: 40px;
+}
+
+.footer-contact, .footer-navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.footer-contact a, .footer-navigation a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    transition: color 0.3s;
+}
+
+.footer-contact a:hover, .footer-navigation a:hover {
+    color: #0097EE;
+}
+
+.footer-logo a {
+    font-size: 24px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer-logo .highlight {
+    color: #0097EE;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #333;
+    padding-top: 20px;
+}
+
+.footer-bottom p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.footer-social {
+    display: flex;
+    gap: 15px;
+}
+
+.footer-social a {
+    font-size: 18px;
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-social a:hover {
+    color: #0097EE;
+}
