--- a/style.css
+++ b/style.css
@@ -135,16 +135,24 @@ h1, h2, p{
     gap: 0.5rem;
   }
  
-  
   #btn-mobile {
     display: none;
   }
   
   @media (max-width: 600px) {
+    .header{
+      display: flex;
+      position: absolute;    
+      justify-content: space-evenly;
+      align-items: center;
+    }
     .header .nav .menu {
+      margin-right: 0;
+      display: flex;
+      flex-direction: column;
       display: block;
       position: absolute;
-      width: 100%;
+      width: 50%;
       top: 70px;
       right: 0px;
       background: #007ACC;
@@ -155,14 +163,13 @@ h1, h2, p{
       overflow-y: hidden;
     }
     #nav.active #menu {
-      height: calc(100vh - 70px);
+      height: 300px;
       visibility: visible;
       overflow-y: auto;
     }
     .header .nav .menu a {
       padding: 1rem 0;
       margin: 0 1rem;
-      border-bottom: 2px solid white;
     }
     #btn-mobile {
       display: flex;
@@ -186,7 +193,7 @@ h1, h2, p{
       height: 2px;
       background: currentColor;
       margin-top: 5px;
-      transition: 0.3s;
+      transition: 0.3s ;
       position: relative;
     }
     #nav.active #hamburger {
@@ -198,6 +205,9 @@ h1, h2, p{
     #nav.active #hamburger::after {
       transform: rotate(-135deg);
       top: -7px;
+    }
+    .header .nav{
+        margin-right: 0rem;
     }
   }
 
